# W3CC-TradingBot

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
tradebot-mv/: pyproject.toml
tradebot-mv/tests/: __init__.py  progress.txt
tradebot-mv/tradebot_mv/: Connection.py  DataFetch.py  Exchange.py  ExchangeConnector.py  Fetch.py  Logger.py  SendRequest.py  Trade.py  TradeAlgorithm.py  __init__.py
